# python_package_template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  template_tests.yml  typecheck.yml
src/python_package_template/: __init__.py  module_name.py
